criação de descrições e nomes fictícios

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
   
   <header>
     <nav class="nav-bar">
-      <i class="fa-solid fa-mug-hot nav-logo">COFFEE</i>
+      <a href="#body"><i class="fa-solid fa-mug-hot nav-logo">COFFEE</i></a>
 
       <ul class="nav-list">
         <li class="nav-item active">
@@ -51,7 +51,7 @@
         </h1>
 
         <p class="description">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi magni ex aspernatur obcaecati laudantium, debitis hic fugit repellendus, ipsum nesciunt eum! Fugit cupiditate nulla ea expedita mollitia, veritatis assumenda nisi?
+          Descubra o aroma e o sabor de cafés cuidadosamente selecionados e preparados com paixão. Na nossa cafeteria, cada xícara é uma experiência única, feita para aquecer o coração e despertar os sentidos. Venha saborear momentos de prazer e aconchego em cada gole.
         </p>
 
         <div class="cta-buttons">
@@ -90,7 +90,7 @@
 
     <section id="menu">
       <h2 class="section-title">Cardápio</h2>
-      <h3 class="section-subtitle">Nossos pratos especiais</h3>
+      <h3 class="section-subtitle">Nossos <span>cafés</span> especiais</h3>
 
       <div class="dishes">
         <div class="dish">
@@ -101,11 +101,11 @@
           <img src="src/coffee1.png" class="dish-image" alt="">
 
           <h3 class="dish-title">
-            Lorem ipsum
+            Café Sereno
           </h3>
 
           <span class="dish-description">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet, accusantium voluptas ipsum quis dolores numquam quaerat dolor enim ipsa porro aut aspernatur veniam ea? Dolores eveniet ipsum enim laudantium?
+            Um café encorpado e aromático, preparado para despertar os sentidos e aquecer o seu dia. Cada gole traz a intensidade do grão recém-torrado, com notas suaves e uma crema delicada que transforma o momento do café em um verdadeiro ritual de prazer.
           </span>
 
           <div class="dish-rate">
@@ -114,11 +114,11 @@
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
+            <span>(294)</span>
           </div>
 
           <div class="dish-price">
-            <h4>R$20,00</h4>
+            <h4>R$11,50</h4>
             <button class="btn-default">
               <i class="fa-solid fa-basket-shopping"></i>
             </button>
@@ -133,11 +133,11 @@
           <img src="src/coffee2.png" class="dish-image" alt="">
 
           <h3 class="dish-title">
-            Lorem ipsum
+            Aurora Boreal
           </h3>
 
           <span class="dish-description">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet, accusantium voluptas ipsum quis dolores numquam quaerat dolor enim ipsa porro aut aspernatur veniam ea? Dolores eveniet ipsum enim laudantium?
+            Desperte seus sentidos com este cappuccino cremoso e aromático. Preparado com grãos selecionados, possui uma espuma delicada e aveludada que transforma cada gole em um momento de puro prazer. Ideal para começar o dia com energia ou para uma pausa revigorante.
           </span>
 
           <div class="dish-rate">
@@ -150,7 +150,7 @@
           </div>
 
           <div class="dish-price">
-            <h4>R$20,00</h4>
+            <h4>R$13,50</h4>
             <button class="btn-default">
               <i class="fa-solid fa-basket-shopping"></i>
             </button>
@@ -165,11 +165,11 @@
           <img src="src/coffee3.png" class="dish-image" alt="">
 
           <h3 class="dish-title">
-            Lorem ipsum
+            Doce Aconchego
           </h3>
 
           <span class="dish-description">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet, accusantium voluptas ipsum quis dolores numquam quaerat dolor enim ipsa porro aut aspernatur veniam ea? Dolores eveniet ipsum enim laudantium?
+            Delicie-se com o nosso cappuccino premium, servido com uma generosa camada de chantilly cremoso e polvilhado com um toque de cacau. Cada gole é uma experiência aveludada que combina perfeitamente com o aroma rico do café selecionado.
           </span>
 
           <div class="dish-rate">
@@ -178,11 +178,11 @@
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
+            <span>(368)</span>
           </div>
 
           <div class="dish-price">
-            <h4>R$20,00</h4>
+            <h4>R$16,00</h4>
             <button class="btn-default">
               <i class="fa-solid fa-basket-shopping"></i>
             </button>
@@ -197,11 +197,11 @@
           <img src="src/coffee4.png" class="dish-image" alt="">
 
           <h3 class="dish-title">
-            Lorem ipsum
+            Nuvem de Caramelo
           </h3>
 
           <span class="dish-description">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus eveniet, accusantium voluptas ipsum quis dolores numquam quaerat dolor enim ipsa porro aut aspernatur veniam ea? Dolores eveniet ipsum enim laudantium?
+            Uma deliciosa mistura gelada de café espresso e leite, suavemente adoçada com caramelo, coberta com chantilly cremoso e finalizada com grãos de café torrado. Uma experiência visual e gustativa que combina o frescor do gelo, a doçura do caramelo e o aroma intenso do café.
           </span>
 
           <div class="dish-rate">
@@ -210,11 +210,11 @@
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-            <span>(500+)</span>
+            <span>(211)</span>
           </div>
 
           <div class="dish-price">
-            <h4>R$20,00</h4>
+            <h4>R$21,50</h4>
             <button class="btn-default">
               <i class="fa-solid fa-basket-shopping"></i>
             </button>
@@ -232,7 +232,7 @@
         </h2>
 
         <h3 class="section-subtitle">
-          O que os clientes falam sobre nós
+          O que os <span>clientes</span> falam sobre nós
         </h3>
 
         <div class="feedbacks">
@@ -241,7 +241,7 @@
 
             <div class="feedback-content">
               <p class="name">
-                Fulada de Tal
+                Beatriz Costa
                 <span>
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -252,7 +252,7 @@
               </p>
 
               <p>
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Error alias totam voluptates laudantium quasi!"
+                "Amei o cappuccino! Ambiente super aconchegante e atendimento rápido."
               </p>
             </div>
           </div>
@@ -262,7 +262,7 @@
 
             <div class="feedback-content">
               <p class="name">
-                Fulada de Tal
+                Camila Ferreira
                 <span>
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -273,7 +273,7 @@
               </p>
 
               <p>
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Error alias totam voluptates laudantium quasi!"
+                "O café é delicioso e o lugar é muito charmoso. Ambiente perfeito para relaxar."
               </p>
             </div>
           </div>
